--- a/trunk/comanda/ComandaRestaurante/app/build.gradle
+++ b/trunk/comanda/ComandaRestaurante/app/build.gradle
@@ -8,6 +8,7 @@ repositories {
 
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -26,8 +27,8 @@ dependencies {
 apt {
     arguments {
         // Trocar depois quando descobrir a variavel pro manifest file
-        //androidManifestFile 'C:/Users/Eduardo/AndroidStudioProjects/ComandaRestaurante/app/src/main/AndroidManifest.xml'
-        androidManifestFile '/home/eduardo/AdnroidProjects/ComandaRestaurante/app/src/main/AndroidManifest.xml'
+        androidManifestFile 'C:/Users/Eduardo/AndroidStudioProjects/ComandaRestaurante/app/src/main/AndroidManifest.xml'
+        //androidManifestFile '/home/eduardo/AdnroidProjects/ComandaRestaurante/app/src/main/AndroidManifest.xml'
         //androidManifestFile variant.outputs[0]?.processResources?.manifestFile
         logLevel 'TRACE'
         logAppenderConsole 'true'
@@ -37,6 +38,11 @@ apt {
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         applicationId "br.com.ffitcomanda"
