--- a/ComandaCliente/app/src/main/AndroidManifest.xml
+++ b/ComandaCliente/app/src/main/AndroidManifest.xml
@@ -16,30 +16,32 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="br.com.ffit.comanda.global.GlobalClass_">
         <activity android:name="br.com.ffit.comanda.activity.LoginActivity_" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="br.com.ffit.comanda.activity.CadastroRestauranteActivity_"
-            android:label="@string/title_activity_cadastro_restaurante" >
         </activity>
         <activity
             android:name="br.com.ffit.comanda.activity.DashBoardClienteActivity_"
             android:label="@string/title_activity_dash_board_restaurante"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+        <activity android:name="br.com.ffit.comanda.activity.MainActivity_" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
     </application>
 
